[gd_scene load_steps=8 format=3 uid="uid://bfe4isk7hyqoh"]

[ext_resource type="Script" path="res://脚本/蜜蜂模块.gd" id="1_2iifm"]
[ext_resource type="Texture2D" uid="uid://budspspvbnd14" path="res://资源/enemy.png" id="1_rfsun"]
[ext_resource type="AudioStream" uid="uid://b5ma34nbcndwm" path="res://资源/002.ogg" id="3_e8d7l"]

[sub_resource type="Animation" id="Animation_5utvq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_umxra"]
resource_name = "fly"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6ank"]
_data = {
"RESET": SubResource("Animation_5utvq"),
"fly": SubResource("Animation_umxra")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l6sbx"]
radius = 6.0
height = 24.0

[node name="蜜蜂模块" type="Node2D"]
script = ExtResource("1_2iifm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t6ank")
}
autoplay = "fly"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rfsun")
hframes = 3

[node name="Area2D" type="Area2D" parent="." groups=["bees"]]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_l6sbx")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e8d7l")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
